--- a/index.html
+++ b/index.html
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Durgirala Bharathi Sudha | Data Analyst</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #fdfbfb, #ebedee);
-      color: #2d2d2d;
-      overflow-x: hidden;
+      background: linear-gradient(135deg, #fefcea, #f1f4f9);
+      color: #2c2c2c;
     }
     header {
       height: 100vh;
-      background: linear-gradient(to right, #f8f9fa, #e2f1f8);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
       text-align: center;
       padding: 2rem;
+      animation: fadeIn 1.2s ease;
     }
     header img {
-      width: 160px;
-      height: 160px;
+      width: 180px;
+      height: 180px;
       border-radius: 50%;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
     header h1 {
-      font-size: 2.8rem;
+      font-size: 3rem;
       font-weight: 700;
-      color: #00796b;
+      color: #00695c;
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+      color: #555;
       margin-top: 0.5rem;
     }
+
     nav {
       position: sticky;
       top: 0;
-      background: white;
+      background: #fff;
       display: flex;
       justify-content: center;
       gap: 2rem;
       padding: 1rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      z-index: 999;
     }
     nav a {
       text-decoration: none;
       font-weight: 600;
-      color: #00796b;
+      color: #00695c;
       transition: 0.3s;
     }
     nav a:hover { color: #004d40; }
+
     section {
-      padding: 4rem 2rem;
+      padding: 5rem 2rem;
       max-width: 1000px;
       margin: 0 auto;
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     }
+    section.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     h2 {
       font-size: 2rem;
       margin-bottom: 2rem;
-      color: #00796b;
+      color: #004d40;
     }
     .cards {
       display: grid;
@@ -74,25 +86,27 @@
       background: white;
       padding: 1.5rem;
       border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.06);
       transition: transform 0.3s ease;
     }
-    .card:hover { transform: translateY(-5px); }
+    .card:hover { transform: translateY(-6px); }
     .card h3 {
-      font-size: 1.1rem;
-      color: #004d40;
-      margin-bottom: 0.3rem;
+      font-size: 1.2rem;
+      margin-bottom: 0.4rem;
+      color: #00796b;
     }
     .card small {
       font-size: 0.85rem;
-      color: #888;
+      color: #777;
       display: block;
       margin-bottom: 0.8rem;
     }
     .card p {
       font-size: 0.95rem;
-      line-height: 1.4;
+      line-height: 1.5;
+      color: #333;
     }
+
     .skills {
       display: flex;
       flex-wrap: wrap;
@@ -106,23 +120,24 @@
       font-weight: 500;
       color: #00695c;
     }
-    .cta, footer {
+
+    footer {
       text-align: center;
-      margin-top: 3rem;
       padding: 2rem;
+      font-size: 0.95rem;
+      background: none;
+      color: #444;
+      line-height: 1.8;
     }
-    .cta a, footer a {
-      background: #00796b;
-      color: white;
-      padding: 12px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: 600;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    footer p { margin-top: 1rem; font-size: 0.9rem; }
   </style>
 </head>
 <body>
+
   <header>
     <img src="profile.png" alt="Profile">
     <h1>Durgirala Bharathi Sudha</h1>
@@ -140,7 +155,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a detail-oriented data analyst passionate about solving real-world problems through data-driven decision-making. With a Master's degree in Data Analytics & Information Systems from Texas State University (expected May 2025) and strong hands-on experience across tools like Python, SQL, Power BI, and Excel, I help organizations turn raw data into clear insights. I have worked with global teams at Accenture and Sutherland, streamlining data workflows and automating dashboards. As a Graduate Assistant, I handled 10,000+ financial records with 99% accuracy and built reporting pipelines that improved decision speed. I’m also certified in AWS Cloud, Power BI, and Google Analytics. My goal is to contribute to data-focused teams where business impact meets technical precision.</p>
+    <p>I’m Durgirala Bharathi Sudha, a passionate Data Analyst with strong academic grounding and hands-on experience across enterprise and academic environments. With an M.S. in Data Analytics & Information Systems from Texas State University, I specialize in transforming raw data into impactful business insights. My strengths lie in building interactive dashboards, automating processes with Python and SQL, and crafting scalable data workflows. I’ve applied my expertise in organizations like Accenture, Sutherland, and within the university, where I managed over 10,000 financial records with 99% accuracy. My core philosophy is to bridge data complexity with real-world clarity.</p>
   </section>
 
   <section id="experience">
@@ -169,26 +184,20 @@
     <div class="cards">
       <div class="card">
         <h3>📊 Job Market Trends (2025)</h3>
-        <small>Python, JSON, Seaborn</small>
-        <p>Analyzed 60K+ job listings to uncover hiring trends, in-demand skills, work locations, and salary patterns using real-time scraped JSON data. Created interactive visualizations and summaries.</p>
-        <p><a href="https://github.com/BS-Durgirala/my-portfolio/blob/main/notebooks/P1_Jobs_Market_Trends_2025.ipynb" target="_blank">🔗 View Notebook</a></p>
+        <small>Python, JSON, Pandas, Seaborn</small>
+        <p>This project involved analyzing over 60,000 job listings from a scraped JSON dataset of January 2025 job postings. I flattened nested job structures, extracted insights about the most common titles, top hiring companies, location types (remote/hybrid/on-site), frequently mentioned tech skills (via NLP), and salary ranges. Visualizations were created using Seaborn and Matplotlib to support story-driven analytics. This project helps job seekers and workforce strategists alike.</p>
+        <p><a href="https://github.com/BS-Durgirala/my-portfolio/blob/main/notebooks/P1_Jobs_Market_Trends_2025.ipynb" target="_blank">🔗 View Full Notebook</a></p>
       </div>
     </div>
   </section>
 
   <section id="education">
-    <h2>Education & Certifications</h2>
+    <h2>Education</h2>
     <div class="cards">
       <div class="card">
         <h3>M.S. in Data Analytics & Information Systems</h3>
         <small>Texas State University · GPA: 3.89 · Expected May 2025</small>
         <p>TXST Graduate Merit Fellowship Award 2023–24</p>
-      </div>
-      <div class="card">
-        <h3>Certifications</h3>
-        <p>• Microsoft Certified: Power BI Analyst Associate (Apr 2025)<br>
-        • AWS Certified Cloud Practitioner (Apr 2025)<br>
-        • Google Data Analytics Professional (Mar 2025)</p>
       </div>
     </div>
   </section>
@@ -200,23 +209,39 @@
       <div class="skill">SQL</div>
       <div class="skill">Power BI</div>
       <div class="skill">Excel (VBA)</div>
-      <div class="skill">Pandas</div>
-      <div class="skill">Seaborn</div>
       <div class="skill">Tableau</div>
-      <div class="skill">AWS</div>
-      <div class="skill">Apache Airflow</div>
-      <div class="skill">DBT</div>
-      <div class="skill">MongoDB</div>
-      <div class="skill">Scikit-learn</div>
-      <div class="skill">Power Query</div>
+      <div class="skill">Seaborn</div>
       <div class="skill">Google BigQuery</div>
+      <div class="skill">DBT</div>
+      <div class="skill">Power Query</div>
+      <div class="skill">Airflow</div>
+      <div class="skill">AWS</div>
+      <div class="skill">Scikit-learn</div>
     </div>
   </section>
 
-  <footer id="contact">
-    <a href="mailto:bsmg2402@gmail.com">📧 bsmg2402@gmail.com</a>
-    <p><a href="https://www.linkedin.com/in/dbsudha" target="_blank">🔗 LinkedIn</a></p>
-    <a href="resume.pdf" download>📄 Download My Resume</a>
-  </footer>
+  <section id="contact">
+    <h2>Certifications & Contact</h2>
+    <p>🎓 <a href="https://www.linkedin.com/feed/update/urn:li:activity:7185520754424391680/" target="_blank">Google Data Analytics Professional Certificate</a></p>
+    <p>Email: bsmg2402@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/dbsudha" target="_blank">linkedin.com/in/dbsudha</a></p>
+    <p>Resume: <a href="resume.pdf" target="_blank">Download PDF</a></p>
+  </section>
+
+  <script>
+    // Simple section scroll animation
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('active');
+        }
+      });
+    }, { threshold: 0.15 });
+
+    document.querySelectorAll('section').forEach(section => {
+      observer.observe(section);
+    });
+  </script>
+
 </body>
 </html>
