--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Durgirala Bharathi Sudha | Data Analyst</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
       margin: 0;
@@ -96,17 +96,28 @@
       justify-content: center;
     }
     footer {
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      font-size: 1rem;
+      color: #00796b;
       padding: 2rem 1rem;
       background: none;
-      font-size: 0.95rem;
-      color: #444;
     }
     footer a {
-      margin: 0 1rem;
       text-decoration: none;
       color: #00796b;
-      font-size: 1.2rem;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 1.1rem;
+    }
+    footer a i {
+      color: #00796b;
+      font-size: 1.3rem;
     }
   </style>
 </head>
@@ -186,7 +197,7 @@
 </section>
 
 <section>
-  <h2>Project: Job Market Trends (2025)</h2>
+  <h2>Projects</h2>
   <div class="project-card">
     <h3>📊 Job Market Trends (2025)</h3>
     <p><strong>Objective:</strong> Analyze job listings from 2025 to uncover hiring trends and market insights</p>
@@ -207,9 +218,9 @@
 </section>
 
 <footer>
-  <p>📧 <a href="mailto:bsmg2402@gmail.com">bsmg2402@gmail.com</a></p>
-  <p>🔗 <a href="https://www.linkedin.com/in/dbsudha" target="_blank">LinkedIn</a></p>
-  <p>📄 <a href="resume.pdf" target="_blank">View Resume</a></p>
+  <a href="mailto:bsmg2402@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
+  <a href="https://www.linkedin.com/in/dbsudha" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+  <a href="resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
 </footer>
 
 </body>
