--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <footer>
   <a href="mailto:bsmg2402@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
   <a href="https://www.linkedin.com/in/dbsudha" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a href="resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="Sudha resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
 </footer>
 
 </body>
