--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
 </header>
 
 <section>
+  <h2>About Me</h2>
+  <div class="card" style="max-width: 760px; margin: auto;">
+    <p>I’m Durgirala Bharathi Sudha, a data analyst with a passion for turning raw datasets into real-world insight. I hold a Master’s in Data Analytics & Information Systems from Texas State University, where I’ve worked as a Graduate Assistant managing over 10,000 financial records with 99% accuracy and building automation pipelines that improve operational efficiency.
+
+Previously, I worked as a Junior Data Analyst at Accenture and as a Customer Insights Analyst at Sutherland Global, where I delivered interactive dashboards, optimized data workflows, and helped reduce data discrepancies and recurring service issues. My technical toolkit includes Python, SQL, Power BI, Tableau, Airflow, AWS, and Excel — with a strong grasp of machine learning basics, cloud tools, and ETL pipelines.
+
+What sets me apart is my ability to blend business thinking with technical precision. Whether it’s automating reports or visualizing complex KPIs, I focus on crafting solutions that help stakeholders make confident, data-backed decisions. I’m actively looking for opportunities to contribute to teams that value innovation, continuous learning, and impactful analytics.</p>
+  </div>
+</section>
+
+<section>
   <h2>Experience</h2>
   <div class="card-grid">
     <div class="card">
@@ -220,7 +231,7 @@
 <footer>
   <a href="mailto:bsmg2402@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
   <a href="https://www.linkedin.com/in/dbsudha" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a href="Sudha resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
 </footer>
 
 </body>
