--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <section>
   <h2>About Me</h2>
-  <div class="card" style="max-width: 760px; margin: auto;">
+  <div class="card" style="max-width: 760px; margin: auto; text-align: left;">
     <p>I’m Durgirala Bharathi Sudha, a data analyst with a passion for turning raw datasets into real-world insight. I hold a Master’s in Data Analytics & Information Systems from Texas State University, where I’ve worked as a Graduate Assistant managing over 10,000 financial records with 99% accuracy and building automation pipelines that improve operational efficiency.
 
 Previously, I worked as a Junior Data Analyst at Accenture and as a Customer Insights Analyst at Sutherland Global, where I delivered interactive dashboards, optimized data workflows, and helped reduce data discrepancies and recurring service issues. My technical toolkit includes Python, SQL, Power BI, Tableau, Airflow, AWS, and Excel — with a strong grasp of machine learning basics, cloud tools, and ETL pipelines.
